# agile_software_dev_practice

./: CMakeLists.txt  make.sh  readme.md
cmake/: BuildGoogletest.cmake
src/: CMakeLists.txt  foo.cpp  foo.h  game.cpp  game.h  main.cpp  scorer.cpp  scorer.h
